Trying to fix horizontal scrolling.

--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,7 @@ footer div p {
 @media (max-width: 700px) {
 
   html, body {
+    width: 100%;
     overflow-x: hidden;
   }
   body {
